--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -7,3 +7,14 @@
 #greeting-container {
   margin-top: 20px;
 }
+
+#display-posts-container {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+
+#display-posts-container div{
+    border-style: solid;
+    padding: 10px;
+    margin-bottom: 10px;
+}
