--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,7 +1,17 @@
+body {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#6e60d0+1,5680e9+100 */
+  background: #6e60d0; /* Old browsers */
+  background: -moz-linear-gradient(top,  #6e60d0 1%, #5680e9 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #6e60d0 1%,#5680e9 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #6e60d0 1%,#5680e9 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6e60d0', endColorstr='#5680e9',GradientType=0 ); /* IE6-9 */
+}
+
 #login {
   margin-left: auto;
   margin-right: auto;
-  width: 650px;
+  width: 284px;
+  height:69px;
 }
 
 #greeting-container {
