--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -10,25 +10,47 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#6e60d0+1,5680e9+100 */
+    background: #6e60d0; /* Old browsers */
+    background: -moz-linear-gradient(top,  #6e60d0 1%, #5680e9 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #6e60d0 1%,#5680e9 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #6e60d0 1%,#5680e9 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6e60d0', endColorstr='#5680e9',GradientType=0 ); /* IE6-9 */
 }
 
 .mainWrapper{
     height:100%;
     display:flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
+    column-gap: 200px;
+}
+
+.welcomeWrapper{
+    color: white;
+    height: 300px;
+    width: 600px;
+}
+
+#desc {
+    font-size: 24px;
+    width: 600px;
 }
 
 .signButtonWrapper{
+    width: 392px;
+    height: 372px;
     display:flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
+    background: white;
+    text-align: center;
+    border-radius: 25px;
 }
 
 .signButton{
     margin: 10px;
-    width:100px;
-    height:40px;
     font-size: 15px;
     font-family: 'Open Sans', sans-serif;
     background-color: #fff;
