--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -85,3 +85,28 @@ body{
     transition: 0.2s;
 }
 
+
+#copyWrapper{
+    display:flex;
+    flex-direction:revert;
+}
+
+#urlBox{
+    margin-right: 10px;
+    margin-left: auto;
+    font-family: Raleway;
+    font-size: 15px;
+    box-shadow: 3px 3px black !important;
+    width: 20%;
+}
+
+#copyBtn{
+    margin-right: 30px;
+    height: 5vh;
+    box-shadow: 3px 3px black;
+    background-color: white;
+    font-family: Raleway;
+    font-size: 15px;
+
+}
+
